init Auth
